<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="0dp"
        android:layout_weight="4"
        android:orientation="vertical">

        <TextView
            android:id="@+id/surname"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:text="@string/surname" />

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:text="@string/name" />

        <TextView
            android:id="@+id/secondName"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:text="@string/secondName" />

        <TextView
            android:id="@+id/year"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:text="@string/year" />

        <TextView
            android:id="@+id/city"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:text="@string/city" />

        <TextView
            android:id="@+id/school"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:text="@string/school" />

        <TextView
            android:id="@+id/programmingExperience"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:text="@string/programmingExperience" />

        <TextView
            android:id="@+id/progLangKnowledges"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:text="@string/progLangKnowledges" />

    </LinearLayout>

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/inputSurname"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/inputName"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/inputSecondName"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/inputYear"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/inputCity"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radioSchool"
                android:layout_width="match_parent"
                android:layout_height="24dp" />

            <RadioButton
                android:id="@+id/radioProgExperience"
                android:layout_width="match_parent"
                android:layout_height="24dp" />

        </RadioGroup>

        <CheckBox
            android:id="@+id/checkBoxProgLangKnowledges"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_gravity="start"
            app:centerIfNoTextEnabled="false" />
    </LinearLayout>

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="0dp"
        android:layout_weight="5"
        android:orientation="vertical">

        <CalendarView
            android:id="@+id/calendarView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

</LinearLayout>
